--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 </head>
 <body>
     <header>
-        <div class="container flex space-b">
-            <div>logo</div>
+        <div id="menu-header" class="container content-cont">
+            <img src="img/logo.png" alt="logo">
             <div><i class="fa-solid fa-bars"></i></div>
+            <nav id="dek-menu">
+                <ul class="flex">
+                    <li>Planning</li>
+                    <li>Testimonials</li>
+                    <li>Features</li>
+                    <li>About Us</li>
+                    <li>Get Started</li>
+                </ul>
+            </nav>
         </div>
+       
     </header>
     <main></main>
     <footer></footer>
