--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <div id="menu-header" class="container content-cont">
             <img src="img/logo.png" alt="logo">
-            <div><i class="fa-solid fa-bars"></i></div>
+            <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
             <nav id="dek-menu">
                 <ul class="flex">
                     <li>Planning</li>
                     <li>Testimonials</li>
                     <li>Features</li>
                     <li>About Us</li>
-                    <li>Get Started</li>
+                    <li id="button">Get Started</li>
                 </ul>
             </nav>
         </div>
