--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link font awesome  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <!-- inizio header  -->
     <header>
-        <div id="menu-header" class="container content-cont">
+        <div id="menu-header" class="container-big flex space-b">
             <img src="img/logo.png" alt="logo">
             <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+            <!-- inizio menu dekstop -->
             <nav id="dek-menu">
                 <ul class="flex">
                     <li>Planning</li>
@@ -24,9 +30,24 @@
                 </ul>
             </nav>
         </div>
-       
     </header>
-    <main></main>
+    <!-- fine header  -->
+    <main>
+        <!-- inizio jumbotron  -->
+        <section id="jumbotron">
+            <div class="container-big flex space-b row">
+                <div class="big-box box">
+                    <div class="box-text"></div>
+                    <div class="box-img"></div>
+                </div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
