--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li>Testimonials</li>
                     <li>Features</li>
                     <li>About Us</li>
-                    <li id="button">Get Started</li>
+                    <li class="button"><a href="#" id="btn-menu">Get Started</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,15 +35,37 @@
     <main>
         <!-- inizio jumbotron  -->
         <section id="jumbotron">
-            <div class="container-big flex space-b row">
-                <div class="big-box box">
-                    <div class="box-text"></div>
-                    <div class="box-img"></div>
+            <div class="container-big flex row">
+                <div class="big-box">
+                    <div class="box-text">
+                        <h2>Get a demo application</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique magnam odit cum eos autem nam ipsam quaerat esse necessitatibus, est magni molestias, commodi quisquam a quidem.</p>
+                        <div class="button button-box"><a href="#" id="btn-box"><i id="apple" class="fa-brands fa-apple"></i> App Store</a></div>
+                    </div>
+                    <div class="box-img">
+                        <img src="img/phone.png" alt="">
+                    </div>
                 </div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="box">
+                    <div>icona</div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                </div>
+                <div class="box">
+                    <div>icona</div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                </div>
+                <div class="box">
+                    <div>icona</div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                </div>
+                <div class="box">
+                    <div>icona</div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                </div>
             </div>
         </section>
     </main>
