fine sezione jumbotron

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                     </div>
                 </div>
                 <div class="box">
-                    <div>icona</div>
+                    <div><i class="fa-solid fa-file-code"></i></div>
                     <h2>Clean Code</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
-                    <div>icona</div>
+                    <div><i class="fa-solid fa-compass-drafting"></i></div>
                     <h2>Clean Code</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
-                    <div>icona</div>
+                    <div><i class="fa-solid fa-laptop-code"></i></div>
                     <h2>Clean Code</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
-                    <div>icona</div>
+                    <div><i class="fa-sharp fa-solid fa-bullhorn"></i></div>
                     <h2>Clean Code</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
