fine sezione strategic planning

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                 <div class="big-box">
                     <div class="box-text">
                         <h2>Get a demo application</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique magnam odit cum eos autem nam ipsam quaerat esse necessitatibus, est magni molestias, commodi quisquam a quidem.</p>
-                        <div class="button button-box"><a href="#" id="btn-box"><i id="apple" class="fa-brands fa-apple"></i> App Store</a></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique magnam
+                                odit cum eos autem nam ipsam quaerat esse necessitatibus, est magni molestias, commodi
+                                quisquam a quidem.</p>
+                            <div class="button button-box"><a href="#" id="btn-box"><i id="apple"
+                                        class="fa-brands fa-apple"></i> App Store</a></div>
                     </div>
                     <div class="box-img">
                         <img src="img/phone.png" alt="">
@@ -49,22 +52,63 @@
                 <div class="box">
                     <div><i class="fa-solid fa-file-code"></i></div>
                     <h2>Clean Code</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur
+                        accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos
+                        modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
                     <div><i class="fa-solid fa-compass-drafting"></i></div>
                     <h2>Clean Code</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur
+                        accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos
+                        modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
                     <div><i class="fa-solid fa-laptop-code"></i></div>
                     <h2>Clean Code</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur
+                        accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos
+                        modi! Officia labore similique ratione animi perferendis modi.</p>
                 </div>
                 <div class="box">
                     <div><i class="fa-sharp fa-solid fa-bullhorn"></i></div>
                     <h2>Clean Code</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos modi! Officia labore similique ratione animi perferendis modi.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sit deleniti recusandae, tenetur
+                        accusantium pariatur dolorum impedit exercitationem officia corporis reprehenderit dignissimos
+                        modi! Officia labore similique ratione animi perferendis modi.</p>
+                </div>
+            </div>
+        </section>
+        <!-- fine sezione jumbotron  -->
+        <!-- inizio sezione strategic planning  -->
+        <section id="strategic-planning">
+            <div class="container-big flex row">
+                <div class="big-box">
+                    <div class="box-img">
+                        <div>
+                            <img src="img/planning1.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h2>strategic Planning</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, magnam culpa!
+                                Voluptatibus alias fugit optio repudiandae incidunt itaque maxime soluta, corporis earum
+                                harum enim dignissimos eum ipsa, necessitatibus nihil. Sed?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="big-box">
+                    <div class="box-img">
+                        <div>
+                            <img src="img/planning2.png" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h2>strategic Planning</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, magnam culpa!
+                                Voluptatibus alias fugit optio repudiandae incidunt itaque maxime soluta, corporis earum
+                                harum enim dignissimos eum ipsa, necessitatibus nihil. Sed?</p>
+                                <i class="fa-sharp fa-solid fa-arrow-down"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
