media query tablet-dekstop jumbo

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur similique magnam
                                 odit cum eos autem nam ipsam quaerat esse necessitatibus, est magni molestias, commodi
                                 quisquam a quidem.</p>
-                            <div class="button button-box"><a href="#" id="btn-box"><i id="apple"
-                                        class="fa-brands fa-apple"></i> App Store</a></div>
+                            <a href="#" id="btn-box" class="button button-box"><i id="apple"
+                                        class="fa-brands fa-apple"></i> App Store</a>
                     </div>
                     <div class="box-img">
                         <img src="img/phone.png" alt="">
