fine sezione testimonial

--- a/index.html
+++ b/index.html
@@ -102,11 +102,51 @@
                         <div class="box-text">
                             <h2>strategic Planning</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, magnam culpa!
-                                Voluptatibus alias fugit optio repudiandae incidunt itaque maxime soluta, corporis earum
-                                harum enim dignissimos eum ipsa, necessitatibus nihil. Sed?</p>
+                                Voluptatibus alias fugit optio repudiandae incidunt itaque maxime soluta, necessitatibus nihil. Sed?</p>
                                 <i class="fa-sharp fa-solid fa-arrow-down"></i>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- fine sezione planning  -->
+        <!-- inizio sezione Testimonials  -->
+        <section id="testimonials">
+            <div class="container-big flex row">
+                <div class="box-text">
+                    <h4>Testimonials</h4>
+                    <h2>We are Committed expert partners</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt non aspernatur accusantium. Dolore rerum quia laudantium consectetur alias dolores nemo eligendi optio quis ratione voluptate ut, libero magni numquam eaque.</p>
+                </div>
+                <div class="big-box">
+                    <div class="testimonials">
+                        <div id="img-testimonial">
+                            <img src="img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolorum distinctio dolore veritatis, fuga.</p>
+                            <h3>nome</h3>
+                        </div>
+                    </div>
+                    <div class="testimonials">
+                        <div id="img-testimonial">
+                            <img src="img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolorum distinctio dolore veritatis, fuga.</p>
+                            <h3>nome</h3>
+                        </div>
+                    </div>
+                    <div class="testimonials">
+                        <div id="img-testimonial">
+                            <img src="img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolorum distinctio dolore veritatis, fuga.</p>
+                            <h3>nome</h3>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
